update pakai jpa dan postgres